<resources>
    <string name="app_name">Attractions</string>

    <string name="app_home_title">悠遊台北</string>
    <string name="app_home_choose_language">選擇語言</string>
    <string name="app_home_attractions_with_value">台北市景點 1/%s</string>
    <string name="app_home_news">最新消息</string>
    <string name="app_home_attractions">遊憩景點</string>

    <string-array name="language_options">
        <item>英文</item>
        <item>簡體中文</item>
        <item>正體中文</item>
        <item>日文</item>
        <item>韓文</item>
        <item>西班牙文</item>
        <item>印尼文</item>
        <item>泰文</item>
        <item>越南文</item>
    </string-array>
    <string-array name="language_values">
        <item>en</item>
        <item>zh-cn</item>
        <item>zh-tw</item>
        <item>ja</item>
        <item>ko</item>
        <item>es</item>
        <item>id</item>
        <item>th</item>
        <item>vi</item>
    </string-array>
</resources>